--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 alt="Card image cap">
               <div class="card-body" style="margin-bottom:0px;padding-bottom:0px">
                 <h5 class="card-title" style="font-weight: bold">Srirag Govardhana</h5>
-                <p class="card-text" style="color:grey">Secretary General</p>
+                <p class="card-text" style="color:grey">Under Secretary General</p>
               </div>
               <div class="card-body" style="margin-bottom:1rem">
                 <a href="#" class="card-link">
@@ -259,7 +259,7 @@
                   " alt="Card image cap">
               <div class="card-body" style="margin-bottom:0px;padding-bottom:0px">
                 <h5 class="card-title" style="font-weight: bold">Jonathan Wick</h5>
-                <p class="card-text" style="color:grey">Deputy Secretary General</p>
+                <p class="card-text" style="color:grey">Under Secretary General</p>
               </div>
               <div class="card-body" style="margin-bottom:1rem">
                 <a href="#" class="card-link">
